# dinit-chimera

./: Makefile  README.md  binfmt-helper.cc  init  lo-helper.c  meson.build  meson_options.txt  shutdown-hook
early-scripts/: aux-filesystems-stop.sh  aux-filesystems.sh  cgroups.sh  common.sh  console.sh  crypt.awk  cryptdisks.sh  dmraid.sh  filesystems.sh  fs-btrfs.sh  fs-zfs.sh  hwclock-stop.sh  hwclock.sh  modules.sh  rcboot-stop.sh  rcboot.sh  rng.sh  root-fsck.sh  static-devnodes.sh  sysctl.sh  tmpfs.sh
early/helpers/: binfmt.cc  clock_common.hh  devclient.cc  devmon.cc  hwclock.cc  kmod.cc  lo.c  lo.cc  meson.build  mnt.cc  mntpt.c  mntpt.cc  seedrng.c  seedrng.cc  swap.c  swap.cc  swclock.cc  sysctl.cc  zram.cc
early/scripts/: binfmt.sh  bless-boot.sh  bless-boot.sh.in  cgroups.sh  clock.sh  common.sh  console.sh  console.sh.in  cryptdisks.sh  dev.sh  dev.sh.in  devmon.sh  dmraid.sh  done.sh  env.sh  fs-btrfs.sh  fs-fsck.sh  fs-fstab.sh  fs-zfs.sh  hostname.sh  kdump.sh  kernel-env.sh  local.sh  lvm.sh  machine-id.sh  mdadm.sh  meson.build  modules-early.sh  modules.sh  net-lo.sh  pseudofs.sh  rng.sh  root-fsck.sh  root-remount.sh  root-rw.sh  swap.sh  sysctl.sh  tmpfiles.sh  tmpfs.sh  try-kdump.sh  (+2 more)
etc/: rc.conf
helpers/: binfmt.cc  clock_common.h  hwclock.c  lo.c  seedrng.c  swclock.c
man/: early-modules.target.8  init-modules.target.8  meson.build
scripts/: binfmt.sh  cgroups.sh  clock.sh  cryptdisks.sh  dmraid.sh  done.sh  fs-btrfs.sh  fs-fsck.sh  fs-fstab.sh  fs-zfs.sh  hostname.sh  hwclock.sh  local.sh  lvm.sh  machine-id.sh  mdadm.sh  modules-early.sh  modules.sh  pseudofs.sh  rng.sh  root-fsck.sh  root-rw.sh  setupcon.sh  swlock.sh  sysctl.sh  tmpfiles.sh  tmpfs.sh
services/: agetty-console  agetty-hvc0  agetty-hvsi0  agetty-tty1  agetty-tty2  agetty-tty3  agetty-tty4  agetty-tty5  agetty-tty6  agetty-ttyAMA0  agetty-ttyS0  agetty-ttyUSB0  block.device  boot  device  early-aux-filesystems  early-aux-fsck  early-binfmt  early-bless-boot  early-cgroups  early-console  early-console.target  early-cryptdisks  early-cryptdisks-early  early-dev-settle  early-dev-trigger  early-devd  early-devices.target  early-devmon  early-dmraid  early-env  early-filesystems  early-fs-btrfs  early-fs-fsck  early-fs-fstab.target  early-fs-local.target  early-fs-pre.target  early-fs-zfs  early-hostname  early-hwclock  (+132 more)
system-services/: init-cgroups  init-console.target  init-cryptdisks  init-cryptdisks-early  init-dmraid  init-done.target  init-fs-fsck  init-fs-fstab.target  init-fs-local.target  init-keyboard.target  init-modules-early  init-pseudofs  init-rng  init-root-fsck  init-root-rw.target  init-swap  init-udev-settle  init-udevd
tmpfiles/: chimera.conf  home.conf  meson.build  static-nodes-permissions.conf  tmp.conf  var.conf  x11.conf
