option('bless-boot-path',
    type: 'string',
    value: '',
    description: 'path to systemd-bless-boot (default: libexecdir/systemd-bless-boot)'
)

option('dinit-console-path',
    type: 'string',
    value: '',
    description: 'path to dinit-console (default: libexecdir/dinit-console)'
)

option('dinit-cryptdisks-path',
    type: 'string',
    value: '',
    description: 'path to dinit-cryptdisks (default: libexecdir/dinit-cryptdisks)'
)

option('dinit-devd-path',
    type: 'string',
    value: '',
    description: 'path to dinit-devd (default: libexecdir/dinit-console)'
)

option('dinit-sulogin-path',
    type: 'string',
    value: '',
    description: 'path to sulogin (default: sbindir/sulogin)'
)

option('default-path-env',
    type: 'string',
    value: '/sbin:/usr/sbin:/bin:/usr/bin',
    description: 'default PATH to use for init'
)

option('libudev',
    type: 'feature',
    value: 'auto',
    description: 'whether to use libudev (for device monitoring)'
)

option('devmon-socket',
    type: 'string',
    value: '/run/dinit-devmon.sock',
    description: 'the device monitor socket path'
)
